--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>GoHighLevel Connector</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
-    <script src="https://dl.frontapp.com/libs/frontjs/v1.1.0/front.js"></script>
-
-    <script src="app.js" defer></script>
+    <script src="https://dl.frontapp.com/libs/plugin-sdk-1.8.1.min.js"></script>
 </head>
 <body>
     <div class="container mt-3">
@@ -15,5 +13,7 @@
         <p id="status-text">Click to save this contact to the CRM.</p>
         <button id="save-to-crm-btn" class="btn btn-primary w-100">Save to GHL</button>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
