--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <title>GoHighLevel Connector</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-
     <script src="https://dl.frontapp.com/libs/plugin-sdk-1.8.1.min.js"></script>
 </head>
 <body>
     <div class="container mt-3">
         <h5>GoHighLevel Sync</h5>
-        <p id="status-text">Click to save this contact to the CRM.</p>
+        
+        <div class="mb-3">
+            <label for="ig-handle-input" class="form-label small">Instagram Handle</label>
+            <input type="text" class="form-control" id="ig-handle-input" placeholder="@username">
+        </div>
+
+        <div class="mb-3">
+            <label for="notes-textarea" class="form-label small">Notes</label>
+            <textarea class="form-control" id="notes-textarea" rows="4"></textarea>
+        </div>
+
+        <p id="status-text" class="small"></p>
         <button id="save-to-crm-btn" class="btn btn-primary w-100">Save to GHL</button>
     </div>
-
+    
     <script src="app.js"></script>
 </body>
 </html>
